--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "aws-amplify": "^1.2.4",
     "react": "^16.12.0",
     "react-bootstrap": "^0.33.0",
+    "react-canvas-draw": "^1.0.2",
+    "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
