--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^1.2.4",
+    "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "react": "^16.12.0",
     "react-bootstrap": "^0.33.0",
     "react-canvas-draw": "^1.0.2",
@@ -12,7 +14,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.2.0",
-    "react-stripe-elements": "^6.0.1"
+    "react-stripe-elements": "^6.0.1",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
